Start point of the app

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
-    <h1>this is the new test</h1>
-    <ul>
-        <li>sayed</li>
-        <li>sayed</li>
-        <li>sayed</li>
-        <li>sayed</li>
-        <li>sayed</li>
-    </ul>
+    <h1>the Start Point</h1>
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, itaque inventore laborum vero dolores facilis
+        maxime tenetur accusamus ducimus? Odit veritatis nisi obcaecati ipsam? Voluptatibus doloremque adipisci natus?
+        Similique, ipsa.
+    </div>
+    <legend>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur!
+    </legend>
 </body>
 
 </html>
