adding the head and the body

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
-    <h1>the Start Point</h1>
-    <p>start point Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, illum!</p>
+    <header>
+        this is the header
+    </header>
+    <div class="container">
+        this is the body
+    </div>
 </body>
 
 </html>
