remove  and start  from  the start point

--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 </head>
 
 <body>
-    <header>
-        this is the header
-    </header>
-    <div class="container">
-        this is the body
-    </div>
+    <h1>the Start Point</h1>
+
 </body>
 
 </html>
