--- a/index.html
+++ b/index.html
@@ -10,28 +10,14 @@
 </head>
 
 <body>
-    <table>
-        <thead>
-            <th>num</th>
-            <th>num</th>
-            <th>num</th>
-            <th>num</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>626262</td>
-                <td>626262</td>
-                <td>626262</td>
-                <td>626262</td>
-            </tr>
-            <tr>
-                <td>626262</td>
-                <td>626262</td>
-                <td>626262</td>
-                <td>626262</td>
-            </tr>
-        </tbody>
-    </table>
+    <h1>this is the new test</h1>
+    <ul>
+        <li>sayed</li>
+        <li>sayed</li>
+        <li>sayed</li>
+        <li>sayed</li>
+        <li>sayed</li>
+    </ul>
 </body>
 
 </html>
