Revert "ad table"
This reverts commit 67cd3c1199d7ff92114bc743dc7149ebef5eea9f.

--- a/index.html
+++ b/index.html
@@ -10,28 +10,15 @@
 </head>
 
 <body>
-    <table>
-        <thead>
-            <th>num</th>
-            <th>num</th>
-            <th>num</th>
-            <th>num</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-        </tbody>
-    </table>
+    <h1>the Start Point</h1>
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, itaque inventore laborum vero dolores facilis
+        maxime tenetur accusamus ducimus? Odit veritatis nisi obcaecati ipsam? Voluptatibus doloremque adipisci natus?
+        Similique, ipsa.
+    </div>
+    <legend>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur!
+    </legend>
 </body>
 
 </html>
