--- a/index.html
+++ b/index.html
@@ -10,39 +10,8 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-    <h1>this is the new test</h1>
-    <ul>
-        <li>sayed</li>
-        <li>sayed</li>
-        <li>sayed</li>
-        <li>sayed</li>
-        <li>sayed</li>
-    </ul>
-=======
-    <table>
-        <thead>
-            <th>num</th>
-            <th>num</th>
-            <th>num</th>
-            <th>num</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-        </tbody>
-    </table>
->>>>>>> parent of 5457e27 (adding some  values and  color)
+    <h2>Update From test</h2>
+
 </body>
 
 </html>
